--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
 
+  <link rel="stylesheet" href="assets/css/style.css">
+
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
